Closed
Bug 708996
Opened 14 years ago
Closed 14 years ago
JIT failure in Float4Matrix tests (marix initialization for scaling)
Categories
(Tamarin Graveyard :: Baseline JIT (CodegenLIR), defect, P2)
Tamarin Graveyard
Baseline JIT (CodegenLIR)
Tracking
(Not tracked)
VERIFIED
FIXED
Q2 12 - Cyril
People
(Reporter: virgilp, Unassigned)
References
Details
Attachments
(2 files)
|
817 bytes,
text/plain
|
Details | |
|
3.77 KB,
patch
|
lhansen
:
review+
edwsmith
:
superreview+
|
Details | Diff | Splinter Review |
See attachment for a testcase that can run in the shell
Bug is most likely due to float4 inlining
Expected results:
2,0,0,0
0,3,0,0
0,0,0.4000000059604645,0
0,0,0,1
Actual results:
2,0,0,0
0,3,0,0
0,3,0,0
0,0,0,1
| Reporter | ||
Comment 1•14 years ago
|
||
Root cause appers to be CSE for LIR_ffff2f4
| Reporter | ||
Comment 2•14 years ago
|
||
Not CSE afterall (even though it worked with -Dnocse), but improper code generation in Nativei386 (which was copied to NativeX64 too).
| Reporter | ||
Updated•14 years ago
|
| Reporter | ||
Comment 3•14 years ago
|
||
Added patch in case someone feels like reviewing this issue.
Attachment #580357 -
Flags: superreview?(edwsmith)
Attachment #580357 -
Flags: review?(lhansen)
| Reporter | ||
Comment 4•14 years ago
|
||
fixed in changeset 7055:1747a2dd963a
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Updated•14 years ago
|
Attachment #580357 -
Flags: superreview?(edwsmith) → superreview+
Comment 5•14 years ago
|
||
Comment on attachment 580357 [details] [diff] [review]
bugfix
Rubber stamp. My expertise in the Assembler and areas below it is virtually zero.
Attachment #580357 -
Flags: review?(lhansen) → review+
Comment 6•14 years ago
|
||
changeset: 7147:0814059d4ff7
user: Brent Baker <brbaker@adobe.com>
summary: Bug 708996: add testcase that exposed issue
http://hg.mozilla.org/tamarin-redux/rev/0814059d4ff7
Updated•14 years ago
|
Status: RESOLVED → VERIFIED
Flags: in-testsuite+
You need to log in
before you can comment on or make changes to this bug.
Description
•