bugfix for https://bugzilla.mozilla.org/show_bug.cgi?id=708996